--- a/cart.service
+++ b/cart.service
@@ -5,7 +5,7 @@ User=roboshop
 Environment=REDIS_HOST=redis-dev.ashishlavale5.online
 Environment=CATALOGUE_HOST=catalogue-dev.ashishlavale5.online
 Environment=CATALOGUE_PORT=8080
-ExecStart=/usr/bin/node /app/server.js
+ExecStart=/bin/node /app/server.js
 SyslogIdentifier=cart
 
 [Install]
